Using dm4.host.url property & revised dm4-webclient integration.